# tsptw

./: .gitignore  Cargo.toml  README.md  check_solution.cpp  gen_tests.py  run_all_parallel.sh  sol_langevin.txt  sol_solomon_potvin_bengio.txt
src/: heuristics.rs  instance.rs  lib.rs  main.rs  model.rs  relax.rs  state.rs
tests/: langevin.rs  solomon_potvin_bengio.rs  test_utils.rs  tests.rs
