[package]
name    = "tsptw"
version = "0.1.0"
authors = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition = "2018"

[dependencies]
ddo              = "0.3.12"
bitset-fixed     = "0.1.0"
#
structopt        = "0.3.21"
num_cpus         = "1.13.0"

[profile.release]
lto              = true
incremental      = true
panic            = "abort"
